--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "handlebars": "^4.7.6",
-    "loadash": "^1.0.0"
+    "loadash": "^1.0.0",
+    "react": "^16.13.1"
   }
 }
